--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ pytest==8.4.2
 selenium==4.35.0
 webdriver-manager==4.0.2
 requests==2.32.5
+SQLAlchemy==1.4.50
+python-dotenv==1.1.1
+psycopg2-binary==2.9.10
