--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ requests==2.32.5
 SQLAlchemy==1.4.50
 python-dotenv==1.1.1
 psycopg2-binary==2.9.10
+allure-pytest==2.15.0
+allure-python-commons==2.15.0
+pytest-xdist==3.8.0
